--- a/styleprojects.css
+++ b/styleprojects.css
@@ -1,16 +1,35 @@
-.card{
+.card,.card2{
     margin: 0 auto;
-    width: 80%;
+    width: 70%;
     aspect-ratio:1/0.7;
     border-radius: 8px;
     position: relative;
 
 }
 h1{
-    color:currentColor;
+    
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(11, 198, 255, 0.5);
     font-weight: bolder;
+    background: linear-gradient(to right,#ff0000 -20%, #000000 10%,#ff0000 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 2px 2px 4px rgba(43, 1, 65, 0.5);
+}
+.but{
+    position: relative;
+}
+button{
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%,-50%);
+    text-shadow: 2px 2px 4px rgba(0, 132, 255, 0.5);
+    font-weight: bolder;
+}
+button a{
+    color: black;
+    text-decoration: none;
+    font-size:larger;
 }
 section{
     margin-top:+10%;
@@ -18,7 +37,7 @@ section{
 body::-webkit-scrollbar{
     display: none;
   }
-.card .image-box img{
+.card .image-box img, .card2 .image-box img{
     width: 100%;
     height: 100%;
     object-fit:fill;
@@ -26,7 +45,7 @@ body::-webkit-scrollbar{
     transition: 0.5s ease-in-out;
 }
 
-.card::after{
+.card::after,.card2::after{
     content: "";
     position: absolute;
     inset: 0;
@@ -35,19 +54,19 @@ body::-webkit-scrollbar{
     opacity: 0;
     transition: 0.4s ease-in-out;
 }
-.card:hover img{
+.card:hover img,.card2:hover img{
     filter: grayscale(1)
     brightness(0.4);
 }
-.card:hover::after{
+.card:hover::after,.card2:hover::after{
     opacity: 1;
     inset: 20px;
 }
-.card .image-box{
+.card .image-box,.card2 .image-box{
 height: 100%;
 width: 100%;
 }
-.content{
+.content,.content2{
     width: 80%;
     position: absolute;
     top: 50%;
@@ -57,20 +76,20 @@ width: 100%;
 
 }
 
-.content h2, .content p{
+.content h2,.content2 h2, .content p,.content2 p{
 opacity: 0;
 transition: 0.4s 0.2s ease;
 
 }
 
-.card:hover .content h2{
+.card:hover .content h2,.card2:hover .content2 h2{
     scale: 1;
     opacity: 1;
     color: white;
 
 }
 
-.card:hover .content p{
+.card,.card2:hover .content,.content2 p{
     opacity: 1;
     color: white;
     transform: translateY(0);
